# StrongholdRoyale

./: .gitignore  .gitmodules  CMakeLists.txt  SECURITY.md
game/: CMakeLists.txt
game/include/: StrongholdRoyale.h
game/source/: StrongholdRoyale.cpp  main.cpp
lib/sr-world/: CMakeLists.txt
lib/sr-world/include/: SRGameMode.h  SRGameState.h  SRPlayerState.h  SRWorld.h
lib/sr-world/source/: SRGameMode.cpp  SRGameState.cpp  SRPlayerState.cpp  SRWorld.cpp
